syntax = "proto3";
package storage;

service Storage {
    rpc QueryUtxo (QueryUtxoRequest) returns (QueryUtxoResponse);
    rpc AddUtxo (AddUtxoRequest) returns (AddUtxoResponse);
    rpc RemoveUtxo (RemoveUtxoRequest) returns (RemoveUtxoResponse);
    rpc BatchAddUtxo (BatchAddUtxoRequest) returns (BatchAddUtxoResponse);
}

message QueryUtxoRequest {
    string txid = 1; // Transaction ID (hex)
    uint32 vout = 2; // Output index
}
message QueryUtxoResponse {
    bool exists = 1;
    string script_pubkey = 2; // Hex-encoded scriptPubKey
    uint64 amount = 3;        // Amount in satoshis
    string error = 4;         // Error message if query fails
}
message AddUtxoRequest {
    string txid = 1;          // Transaction ID (hex)
    uint32 vout = 2;          // Output index
    string script_pubkey = 3; // Hex-encoded scriptPubKey
    uint64 amount = 4;        // Amount in satoshis
}
message AddUtxoResponse {
    bool success = 1;
    string error = 2; // Error message if add fails
}
message RemoveUtxoRequest {
    string txid = 1; // Transaction ID (hex)
    uint32 vout = 2; // Output index
}
message RemoveUtxoResponse {
    bool success = 1;
    string error = 2; // Error message if remove fails
}
message BatchAddUtxoRequest {
    repeated AddUtxoRequest utxos = 1; // List of UTXOs to add
}
message BatchAddUtxoResponse {
    repeated AddUtxoResponse results = 1; // Results for each UTXO add
}
